# ComfyUI_OmniGen_Nodes

./: .gitignore  README.md  README_CN.md  STATUS.txt  __init__.py  pyproject.toml  requirements.txt
examples/: simplified.json
image/: girl_demo_1024.json
py/: omnigen.py  omnigen_wrappers.py
py/OmniGen/: model.py  pipeline.py  processor.py  scheduler.py  transformer.py  utils.py
py/model/: README.md  config.json
py/tokenizer/: README.md  tokenizer.json  tokenizer_config.json
