[project]
name = "omnigen-set"
description = "ComfyUI custom nodes for OmniGen project. Low VRAM, preview, separated VAE and more"
version = "1.0.1"
license = {text = "MIT License"}
dependencies = ["transformers", "diffusers", "numpy", "datasets", "accelerate", "timm", "peft", "safetensors", "huggingface_hub"]

[project.urls]
Repository = "https://github.com/set-soft/ComfyUI_OmniGen_Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "set-soft"
DisplayName = "ComfyUI_OmniGen_Nodes"
Icon = ""